--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-flow-renderer": "^9.6.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "terminal-in-react": "^4.3.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
