--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use-websocket": "^2.7.1",
+    "recharts": "^2.0.10",
     "terminal-in-react": "^4.3.1",
     "typescript": "^4.3.5",
     "uuid": "^8.3.2",
